--- a/sites/all/themes/wttoc/css/wttoc.styles.css
+++ b/sites/all/themes/wttoc/css/wttoc.styles.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
-@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,700);
+@import url(https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700);
 .SlectBox {
   width: 200px;
   padding: 5px 8px; }
@@ -411,6 +412,9 @@
  * Box Shadow View Row
  */
 /*
+ * Box Shadow Bottom Light
+ */
+/*
  * Buttons Mixins
  */
 /*
@@ -426,11 +430,11 @@
  * Set Up Font Size % For Rem
  */
 html {
-  font-family: "Open Sans", sans-serif, Helvetica;
+  font-family: "Roboto Condensed", sans-serif, Helvetica;
   font-size: 10px;
   margin: 0 auto; }
   html input, html button {
-    font-family: "Open Sans", sans-serif, Helvetica; }
+    font-family: "Roboto Condensed", sans-serif, Helvetica; }
   @media (min-width: 1301px) {
     html {
       max-width: 1300px; } }
@@ -631,7 +635,7 @@ a {
         border-bottom: 1px solid transparent;
         margin-bottom: -1px;
         margin-top: 1px; }
-        .l-region--navigation > div > ul.menu > li > a:hover, .l-region--navigation > div > ul.menu > li > a.active, .l-region--navigation > div > ul.menu > li > div:hover, .l-region--navigation > div > ul.menu > li > div.active, .l-region--navigation > div > ul.menu > li > span:hover, .l-region--navigation > div > ul.menu > li > span.active, .l-region--navigation > nav > ul.menu > li > a:hover, .l-region--navigation > nav > ul.menu > li > a.active, .l-region--navigation > nav > ul.menu > li > div:hover, .l-region--navigation > nav > ul.menu > li > div.active, .l-region--navigation > nav > ul.menu > li > span:hover, .l-region--navigation > nav > ul.menu > li > span.active, .l-region--navigation > ul.menu > li > a:hover, .l-region--navigation > ul.menu > li > a.active, .l-region--navigation > ul.menu > li > div:hover, .l-region--navigation > ul.menu > li > div.active, .l-region--navigation > ul.menu > li > span:hover, .l-region--navigation > ul.menu > li > span.active {
+        .l-region--navigation > div > ul.menu > li > a:hover, .l-region--navigation > div > ul.menu > li > div:hover, .l-region--navigation > div > ul.menu > li > span:hover, .l-region--navigation > nav > ul.menu > li > a:hover, .l-region--navigation > nav > ul.menu > li > div:hover, .l-region--navigation > nav > ul.menu > li > span:hover, .l-region--navigation > ul.menu > li > a:hover, .l-region--navigation > ul.menu > li > div:hover, .l-region--navigation > ul.menu > li > span:hover {
           background-color: #1981CE;
           color: #fff;
           border-bottom: 1px solid #0e4873;
@@ -670,8 +674,79 @@ a {
         display: block; } }
 
 /*
+ * Top Menu
+ */
+.l-superheader nav {
+  position: relative; }
+  .l-superheader nav > ul.menu {
+    width: 100%;
+    font-size: 14px;
+    line-height: 25px;
+    text-align: right;
+    position: absolute;
+    top: 50%;
+    -webkit-transform: translate(0, -50%);
+    transform: translate(0, -50%); }
+    @media (min-width: 0) and (max-width: 768px) {
+      .l-superheader nav > ul.menu {
+        display: none; } }
+    .l-superheader nav > ul.menu > li {
+      list-style: none;
+      display: inline-block; }
+      .l-superheader nav > ul.menu > li > a {
+        display: block;
+        text-decoration: none;
+        padding: 12px 30px;
+        border-left: 1px solid white; }
+        .l-superheader nav > ul.menu > li > a:before {
+          content: '\e81f';
+          font-family: "fontello";
+          font-style: normal;
+          font-weight: normal;
+          speak: none;
+          display: inline-block;
+          text-decoration: inherit;
+          width: 1em;
+          margin-right: .2em;
+          text-align: center;
+          /* opacity: .8; */
+          font-variant: normal;
+          text-transform: none;
+          line-height: 1em;
+          margin-left: .2em;
+          /* font-size: 120%; */
+          -webkit-font-smoothing: antialiased;
+          -moz-osx-font-smoothing: grayscale;
+          /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */ }
+        .l-superheader nav > ul.menu > li > a:before {
+          position: relative;
+          margin-right: 8px;
+          color: #fff;
+          font-size: 14px;
+          font-weight: bold; }
+        .l-superheader nav > ul.menu > li > a#tmenu-SignIn:before {
+          content: '\e82d'; }
+        .l-superheader nav > ul.menu > li > a#tmenu-SubmitListing:before {
+          content: '\e82c';
+          bottom: 1px;
+          font-size: 16px; }
+        .l-superheader nav > ul.menu > li > a#tmenu-SubmitEvent:before {
+          content: '\e82b'; }
+        .l-superheader nav > ul.menu > li > a#tmenu-LogOut:before {
+          content: '\e82e'; }
+    .l-superheader nav > ul.menu ul {
+      display: none; }
+
+@media (min-width: 769px) {
+  .l-header #block-menu-menu-top-menu--2 {
+    display: none; } }
+
+/*
  * Region Containers
  */
+html {
+  min-width: 320px; }
+
 .l-main {
   margin-left: auto;
   margin-right: auto;
@@ -705,8 +780,10 @@ a {
 /*
  * Header Regions Responsive Behavior
  */
-.l-header .l-superheader {
+.l-header .l-superheader .l-superheader-inner {
   min-height: 50px; }
+  .l-header .l-superheader .l-superheader-inner .l-region, .l-header .l-superheader .l-superheader-inner .l-region > .block {
+    min-height: 50px; }
 
 .l-header .l-branding {
   width: 100%;
@@ -895,19 +972,30 @@ body.html .l-page .l-main .l-content {
     color: #333; }
 
 .l-header {
-  border-bottom: 1px solid #e8eaea; }
+  background: url("/sites/all/themes/wttoc/images/lineMulticolor.png");
+  background-position: bottom center;
+  background-size: 100% 4px;
+  background-repeat: no-repeat;
+  padding-bottom: 5px; }
 
 /*
  * Header Regions Stylings
  */
 .l-header .l-superheader {
-  background-color: #0e4873;
-  border-bottom: 1px solid #333;
-  color: #fff; }
+  background-color: #1981CE;
+  color: #fff;
+  box-shadow: 0px 2px 5px -1px #000;
+  box-shadow: 0px 2px 5px -1px rgba(0, 0, 0, 0.75); }
   .l-header .l-superheader span, .l-header .l-superheader p, .l-header .l-superheader h1, .l-header .l-superheader h2, .l-header .l-superheader h3, .l-header .l-superheader h4, .l-header .l-superheader h5, .l-header .l-superheader h6, .l-header .l-superheader a, .l-header .l-superheader div, .l-header .l-superheader li {
     color: #fff; }
   .l-header .l-superheader a:hover {
     color: #fff; }
+
+.l-header .l-superheader .l-superheader-inner {
+  background: url("/sites/all/themes/wttoc/images/lineGreen.png");
+  background-position: bottom center;
+  background-size: 100% 2px;
+  background-repeat: no-repeat; }
 
 /*
  * Content Regions - Stylings
@@ -987,12 +1075,28 @@ body.html .l-page .l-main .l-content {
  * Footer Stylings
  */
 footer.l-footer {
-  background-color: #333;
-  color: #fff; }
-  footer.l-footer span, footer.l-footer p, footer.l-footer h1, footer.l-footer h2, footer.l-footer h3, footer.l-footer h4, footer.l-footer h5, footer.l-footer h6, footer.l-footer a, footer.l-footer div, footer.l-footer li {
-    color: #fff; }
-  footer.l-footer a:hover {
-    color: #fff; }
+  position: relative;
+  color: #333;
+  background: url("/sites/all/themes/wttoc/images/prevImg/footer.jpg");
+  background-size: 150% auto;
+  background-position: bottom center;
+  background-repeat: no-repeat;
+  min-height: 200px; }
+  @media (min-width: 0) and (max-width: 768px) {
+    footer.l-footer {
+      background-size: auto 100%; } }
+  footer.l-footer #block-menu-menu-footer-links {
+    position: absolute;
+    left: 50%;
+    -webkit-transform: translate(-50%, 0);
+    transform: translate(-50%, 0);
+    position: absolute;
+    bottom: 0;
+    width: 70%;
+    background: #fff;
+    /* The Fallback */
+    background: rgba(255, 255, 255, 0.5);
+    padding: 5px; }
 
 /*
  * Jquery UI Overrides
@@ -1008,9 +1112,7 @@ footer.l-footer {
 h1, h2, h3, h4, h5, h6 {
   line-height: 120%;
   padding: 0;
-  font-family: 'Raleway', Arial, sans-serif;
-  font-weight: 500;
-  text-transform: uppercase; }
+  font-weight: bold; }
 
 h1 {
   font-size: 35px;
@@ -1300,8 +1402,14 @@ body.front {
     margin-top: 11px;
     margin-bottom: 11px; }
   body.front .l-region--widetop .views-exposed-form-businesses-and-events-page-results {
-    padding: 20px 5%;
+    padding: 20px 35% 130px 5%;
     text-align: center; }
+    @media (min-width: 431px) and (max-width: 768px) {
+      body.front .l-region--widetop .views-exposed-form-businesses-and-events-page-results {
+        padding: 20px 15% 100px 5%; } }
+    @media (min-width: 0) and (max-width: 430px) {
+      body.front .l-region--widetop .views-exposed-form-businesses-and-events-page-results {
+        padding: 15px 5% 60px 5%; } }
     body.front .l-region--widetop .views-exposed-form-businesses-and-events-page-results .views-exposed-form {
       padding-top: 15px;
       display: inline-block; }
@@ -1346,7 +1454,8 @@ body.front {
           background: rgba(14, 72, 115, 0.75);
           color: #fff;
           padding: 12px;
-          border-radius: 5px 5px 30px 30px; }
+          border-radius: 5px 5px 30px 30px;
+          display: none; }
         body.front .l-region--widetop .views-exposed-form-businesses-and-events-page-results .views-exposed-form .views-exposed-widget .form-submit {
           margin-top: 0; }
         body.front .l-region--widetop .views-exposed-form-businesses-and-events-page-results .views-exposed-form .views-exposed-widget#edit-field-category-wrapper:before {
@@ -1386,14 +1495,27 @@ body.front {
             content: none;
             display: none; }
   body.front .l-region--widetop .v_page_search_results-container {
-    background: url("/sites/all/themes/wttoc/images/prevImg/header.png");
-    background-size: auto 230%;
+    background: url("/sites/all/themes/wttoc/images/prevImg/header.jpg");
+    background-size: auto 100%;
     background-repeat: no-repeat;
     min-height: 200px;
     background-position: center center; }
     @media (min-width: 769px) {
       body.front .l-region--widetop .v_page_search_results-container {
-        background-size: 150% auto; } }
+        background-size: auto 100%; } }
+
+/* Space Changes */
+body.front .l-widetop .small_blocks_feat_biz-container {
+  margin-top: 40px; }
+
+body.front .l-widetop .small_blocks_feat_biz-container .block__content {
+  margin-top: 20px; }
+
+body.front .l-main .block {
+  margin-top: 65px; }
+
+body.front .l-main .block__content {
+  margin-top: 35px; }
 
 /*
  * Business & Events Displays
@@ -2563,7 +2685,7 @@ body.node-type-event{
 .l-widetop .small_blocks_feat_biz-container .b_title_cont, .l-widetop .small_blocks_feat_evs-container .b_title_cont,
 .l-widetop .smallblocks_businesses-container .b_title_cont, .l-widetop .smallblocks_events-container .b_title_cont,
 .l-widetop .smallblocks_busineses_n_events-container .b_title_cont {
-  text-align: center !important; }
+  text-align: left !important; }
   .l-widetop .small_blocks_feat_biz-container .b_title_cont .block__title, .l-widetop .small_blocks_feat_evs-container .b_title_cont .block__title,
   .l-widetop .smallblocks_businesses-container .b_title_cont .block__title, .l-widetop .smallblocks_events-container .b_title_cont .block__title,
   .l-widetop .smallblocks_busineses_n_events-container .b_title_cont .block__title {
@@ -2762,11 +2884,11 @@ body.node-type-event{
     .l-widetop .view-id-small_blocks_businesses_and_or_events .view-content .views-row .views-field-field-address .field-content:before {
       content: '\e816'; }
     .l-widetop .view-id-small_blocks_businesses_and_or_events .view-content .views-row .views-field-field-date-of-event .field-content:before {
-      content: '\e81c'; }
+      content: '\e82b'; }
     .l-widetop .view-id-small_blocks_businesses_and_or_events .view-content .views-row.rowContentType-business-service-or-attraction .views-field.views-field-nothing .teaser__first-wrapper .type-container:before {
-      content: '\e81b'; }
+      content: '\e82c'; }
     .l-widetop .view-id-small_blocks_businesses_and_or_events .view-content .views-row.rowContentType-event .views-field.views-field-nothing .teaser__first-wrapper .type-container:before {
-      content: '\e81c'; }
+      content: '\e82b'; }
     .l-widetop .view-id-small_blocks_businesses_and_or_events .view-content .views-row:hover .image-container img {
       -webkit-transform: scale(1.05, 1.07);
       -webkit-transition-timing-function: ease-out;
@@ -2990,9 +3112,9 @@ body.node-type-event{
   .l-region--sidebar-first .view-id-small_blocks_businesses_and_or_events .view-content .views-row .views-field-field-date-of-event .field-content:before, .l-region--sidebar-second .view-id-small_blocks_businesses_and_or_events .view-content .views-row .views-field-field-date-of-event .field-content:before, .l-content .view-id-small_blocks_businesses_and_or_events .view-content .views-row .views-field-field-date-of-event .field-content:before {
     content: '\e81c'; }
   .l-region--sidebar-first .view-id-small_blocks_businesses_and_or_events .view-content .views-row.rowContentType-business-service-or-attraction .views-field.views-field-nothing .teaser__first-wrapper .type-container:before, .l-region--sidebar-second .view-id-small_blocks_businesses_and_or_events .view-content .views-row.rowContentType-business-service-or-attraction .views-field.views-field-nothing .teaser__first-wrapper .type-container:before, .l-content .view-id-small_blocks_businesses_and_or_events .view-content .views-row.rowContentType-business-service-or-attraction .views-field.views-field-nothing .teaser__first-wrapper .type-container:before {
-    content: '\e81b'; }
+    content: '\e82c'; }
   .l-region--sidebar-first .view-id-small_blocks_businesses_and_or_events .view-content .views-row.rowContentType-event .views-field.views-field-nothing .teaser__first-wrapper .type-container:before, .l-region--sidebar-second .view-id-small_blocks_businesses_and_or_events .view-content .views-row.rowContentType-event .views-field.views-field-nothing .teaser__first-wrapper .type-container:before, .l-content .view-id-small_blocks_businesses_and_or_events .view-content .views-row.rowContentType-event .views-field.views-field-nothing .teaser__first-wrapper .type-container:before {
-    content: '\e81c'; }
+    content: '\e82b'; }
   .l-region--sidebar-first .view-id-small_blocks_businesses_and_or_events .view-content .views-row:hover .image-container, .l-region--sidebar-second .view-id-small_blocks_businesses_and_or_events .view-content .views-row:hover .image-container, .l-content .view-id-small_blocks_businesses_and_or_events .view-content .views-row:hover .image-container {
     overflow: hidden; }
     .l-region--sidebar-first .view-id-small_blocks_businesses_and_or_events .view-content .views-row:hover .image-container img, .l-region--sidebar-second .view-id-small_blocks_businesses_and_or_events .view-content .views-row:hover .image-container img, .l-content .view-id-small_blocks_businesses_and_or_events .view-content .views-row:hover .image-container img {
@@ -3131,5 +3253,105 @@ body.node-type-event{
 	}
 }
 */
+.social-links-block-wttoc-container:after {
+  content: "";
+  display: table;
+  clear: both; }
+
+.social-links-block-wttoc-container .b_title_cont {
+  display: inline-block;
+  float: left;
+  padding: 22px 3px !important;
+  margin: 5px 2px !important; }
+  .social-links-block-wttoc-container .b_title_cont:after {
+    content: "";
+    display: table;
+    clear: both; }
+  .social-links-block-wttoc-container .b_title_cont .block__title {
+    display: inline-block;
+    float: left; }
+
+.social-links-block-wttoc-container .block__content {
+  display: inline-block;
+  float: left;
+  padding: 10px 3px !important;
+  margin: 5px 2px !important; }
+
+.social-links-block-wttoc-container .social-links-block-wttoc {
+  list-style: none;
+  overflow: auto;
+  padding: 0 !important; }
+  .social-links-block-wttoc-container .social-links-block-wttoc:after {
+    content: "";
+    display: table;
+    clear: both; }
+  .social-links-block-wttoc-container .social-links-block-wttoc .views-row {
+    display: block;
+    margin: 5px 3px;
+    padding: 10px 0;
+    border-radius: 50px;
+    overflow: hidden;
+    float: left; }
+
+.social-links-block-wttoc .icon {
+  color: #FFF;
+  font-size: 24px;
+  padding: 8px 4px;
+  background-color: #4a6ea9; }
+
+.social-links-block-wttoc.circle-icons .icon {
+  border-radius: 50%; }
+
+/* Service-specific style */
+.social-links-block-wttoc .service-reddit .icon {
+  padding: 8px 7px 8px 1px;
+  background-color: #ff4500; }
+
+.social-links-block-wttoc .service-slideshare .icon {
+  padding: 8px 2px 8px 6px;
+  background-color: #4a6ea9; }
+
+.social-links-block-wttoc .service-yahoo .icon {
+  padding: 8px 8px 8px 0px;
+  background-color: #720e9e; }
+
+.social-links-block-wttoc .service-facebook .icon {
+  background-color: #3b5998; }
+
+.social-links-block-wttoc .service-twitter .icon {
+  background-color: #55acee; }
+
+.social-links-block-wttoc .service-googleplus .icon {
+  background-color: #dc4a38; }
+
+.social-links-block-wttoc .service-linkedin .icon {
+  background-color: #0e76a8; }
+
+.social-links-block-wttoc .service-youtube .icon {
+  background-color: #c4302b; }
+
+.social-links-block-wttoc .service-vimeo .icon {
+  background-color: #44bbff; }
+
+.social-links-block-wttoc .service-delicious .icon {
+  background-color: #222222; }
+
+.social-links-block-wttoc .service-digg .icon {
+  background-color: #7a9ac2; }
+
+.social-links-block-wttoc .service-flickr .icon {
+  background-color: #ff0084; }
+
+.social-links-block-wttoc .service-google .icon {
+  background-color: #4285f4; }
+
+.social-links-block-wttoc .service-myspace .icon {
+  background-color: #6087bb; }
+
+.social-links-block-wttoc .service-pinterest .icon {
+  background-color: #c8232c; }
+
+.social-links-block-wttoc .service-stumbleupon .icon {
+  background-color: #f74425; }
 
 /*# sourceMappingURL=wttoc.styles.css.map */
