--- a/sites/all/libraries/fontello/css/fontello.css
+++ b/sites/all/libraries/fontello/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?2216418');
-  src: url('../font/fontello.eot?2216418#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?2216418') format('woff'),
-       url('../font/fontello.ttf?2216418') format('truetype'),
-       url('../font/fontello.svg?2216418#fontello') format('svg');
+  src: url('../font/fontello.eot?63868312');
+  src: url('../font/fontello.eot?63868312#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?63868312') format('woff'),
+       url('../font/fontello.ttf?63868312') format('truetype'),
+       url('../font/fontello.svg?63868312#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?2216418#fontello') format('svg');
+    src: url('../font/fontello.svg?63868312#fontello') format('svg');
   }
 }
 */
@@ -97,3 +97,7 @@
 .icon-quote-right:before { content: '\e828'; } /* '' */
 .icon-hourglass:before { content: '\e829'; } /* '' */
 .icon-newspaper:before { content: '\e82a'; } /* '' */
+.icon-e:before { content: '\e82b'; } /* '' */
+.icon-fg:before { content: '\e82c'; } /* '' */
+.icon-login:before { content: '\e82d'; } /* '' */
+.icon-logout:before { content: '\e82e'; } /* '' */
