--- a/sites/all/themes/wttoc/sass/components/Off_Canvas.scss
+++ b/sites/all/themes/wttoc/sass/components/Off_Canvas.scss
@@ -35,7 +35,7 @@
 			display: block;
 		}
 		&:target .l-region{
-			overflow:visibile;
+			overflow:visible;
 		}
 		&:not(:target) {
 			.l-region {
