--- a/sites/all/themes/wttoc/sass/wttoc.styles.scss
+++ b/sites/all/themes/wttoc/sass/wttoc.styles.scss
@@ -18,7 +18,8 @@
 @import "components/Views_Unslider";
 @import "components/Views_Small_Blocks_Biz_Evs";
 @import "components/Views_All_BlogsAndNews";
-@import "components/Views_Social_Icons"
+@import "components/Views_Social_Icons";
+@import "components/Wttoc_calendar";
 
 // Import variables, abstractions, base styles and components.
 // Uncomment the next lines and adjust them to your needs.
