theme updates - search results page

--- a/sites/all/themes/wttoc/css/wttoc.reset.css
+++ b/sites/all/themes/wttoc/css/wttoc.reset.css
@@ -73,4 +73,10 @@ table {
   overflow-x: auto;
   display: block; }
 
+/*
+ *
+ */
+a {
+  text-decoration: none; }
+
 /*# sourceMappingURL=wttoc.reset.css.map */
