--- a/sites/all/themes/wttoc/sass/components/General_Elements.scss
+++ b/sites/all/themes/wttoc/sass/components/General_Elements.scss
@@ -73,8 +73,9 @@ fieldset{
 /*
  * Back To Top Z Index
  */
- #backtotop{
-	z-index:1000;
+ body #backtotop{
+	 z-index:1000;
+	 bottom:50px;
 }
 
 /*
@@ -118,14 +119,86 @@ footer.l-footer{
 }
 
 .sharethis-wrapper{
-	max-width:110px;
+	max-width:80%;
 	text-align:left;
-	@include centerYAbsoluteNoIE8;
 	position:fixed;
-	left:0;
+	right:0;
+	bottom:0;
+	border: 1px solid $GRAY;
     z-index: 999;
-	padding: 5px 0px 10px 5px;
-    @include backgroundOpacity($GRAY, 0.5);
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
+	padding: 5px 5px 0 5px;
+	margin: 5px;
+	border-radius:6px;
+    @include backgroundOpacity($WHITE, 1);
+}
+
+
+/*
+ * Top Menu
+ */
+.l-superheader{
+	nav{
+		position:relative;
+		> ul.menu{
+			width: 100%;
+			font-size: 14px;
+			line-height: 25px;
+			@include breakpoint(0 $breakpointTablet){
+				display:none;
+			}
+			text-align: right;
+			@include centerYAbsoluteNoIE8;
+			> li{
+				list-style: none;
+				display: inline-block;
+				> a{
+					display: block;
+					text-decoration:none;
+					padding: 12px 30px;
+					border-left: 1px solid white;
+					@include fontelloBefore;
+					&:before{
+						position:relative;
+						margin-right:8px;
+						color: $WHITE;
+						font-size: 14px;
+						font-weight:bold;
+					}
+					&#tmenu-Search{
+						color: $color1;
+						color: transparent;
+						letter-spacing: -10px;
+						padding-left:5px;
+						padding-right:10px;
+					}
+					&#tmenu-Search:before{
+						content:'\e82f';
+					}
+					&#tmenu-SignIn:before{
+						content:'\e82d';
+					}
+					&#tmenu-SubmitListing:before{
+						content:'\e82c';
+						bottom:1px;
+						font-size:16px;
+					}
+					&#tmenu-SubmitEvent:before{
+						content:'\e82b';
+					}
+					&#tmenu-LogOut:before{
+						content:'\e82e';
+					}
+				}
+			}
+			ul{
+				display:none;
+			}
+		}
+	}
+}
+
+.l-header #block-menu-menu-top-menu--2{
+	@include breakpoint($breakpointTabletP1){
+		display:none;
+	}
 }
