--- a/sites/all/themes/wttoc/sass/components/Views_All_BusinessesAndEvents.scss
+++ b/sites/all/themes/wttoc/sass/components/Views_All_BusinessesAndEvents.scss
@@ -1,25 +1,53 @@
 /*
  * Business & Events Displays
  */
+//Grid/List Switcher
+.js .view-id-businesses_and_events.view-display-id-page_results{
+	.switchGL{
+		@include clearfix;
+		position: relative;
+		.searchResultsHeader{
+			padding-right:60px
+		}
+		.containerGridList{
+			position:absolute;
+			right:0;
+			bottom:10px;
+
+			.buttonGrid, .buttonList{
+				font-size:19px;
+				line-height:19px;
+				cursor:pointer;
+				display:inline-block;
+				&.activeGridList{
+					color:$color1;
+				}
+			}
+		}
+	}
+}
+
  //All results
-.view-id-businesses_and_events.view-display-id-page_results{
+.no-js .view-id-businesses_and_events.view-display-id-page_results,
+.js .view-id-businesses_and_events.view-display-id-page_results.gridResults{
 	.view-content{	
-		@include views3Wide1MobileDefault;
+		@include views4XWide3Wide2Tablet1MobileDefault;
 		.views-row{
+			position:relative;
+			padding-bottom:10px;
 			//Field Row Styling
 			.views-field{
 				position:relative;
 				padding:7px 0;
-				margin-left:7px;
 				margin-right:7px;
-				border-top:1px solid $DARKERLIGHTGRAY;
 				@include fontelloBefore;
 				&:before{
 					background-color: $color3;
 					color:$WHITE;
-					line-height: 20px;
-					height:20px;
-					width: 20px;
+					font-size:18px;
+					line-height: 18px;
+					height:18px;
+					width: 18px;
 					padding:2px;
 					border-radius: 3px;
 					position:absolute;
@@ -33,8 +61,8 @@
 					padding-left:40px;
 				}
 			}
-			//top icon
-			.views-field.views-field-type{
+			//top verified line
+			.views-field-field-featured-content{
 				padding:4px;
 				border-top:0;
 				position:absolute;
@@ -50,8 +78,7 @@
 				@include backgroundOpacity($color3,0.8);
 				@include cssTransition(all 0.35s ease-in-out);
 				&:before{
-					background-color:$WHITE;
-					color:$color3;
+					display:none;
 				}
 				.field-content{
 					min-width:80px;
@@ -62,7 +89,7 @@
 				}
 			}
 			&:hover{
-				.views-field.views-field-type{
+				.views-field-field-featured-content{
 					min-width:145px;
 					max-width:145px;
 					.field-content{
@@ -70,49 +97,52 @@
 					}
 				}
 			}
+			.views-field.views-field-type{
+				&:before{
+					@include remFontSize($fontXXS);
+					border-radius: 17px;
+					padding: 5px;
+					font-size:14px;
+					line-height: 13px;
+					height:14px;
+					width: 14px;
+				}
+			}
 			//content type: icons & colorings
 			&.rowContentType-business-service-or-attraction{
-				.views-field.views-field-type{//top icon
-					@include backgroundOpacity($color3,0.8);
+				.views-field{//other icons
 					&:before{
-						content:'\e81b';
 						background-color:$WHITE;
 						color:$color3;
 					}
-					.field-content{
+				}
+				.views-field.views-field-type{//top color1
+					&:before{
+						content:'\e82c';
+						background-color:$color3;
 						color:$WHITE;
 					}
-				}	
-				.views-field.views-field-title{//title
-					@include colorDescendantsFont($color3);
 				}
-				.views-field{//other icons
-					&:before{
-						background-color:$color3; 
-						color:white;
-					}
+				.views-field-field-featured-content{
+					@include backgroundOpacity($color3,0.8);
 				}
 			}
 			&.rowContentType-event{
-				.views-field.views-field-type{//top color1
-					@include backgroundOpacity($color1,0.8);
+				.views-field{//other icons
 					&:before{
-						content:'\e81c';
 						background-color:$WHITE;
 						color:$color1;
 					}
-					.field-content{
+				}
+				.views-field.views-field-type{//top color1
+					&:before{
+						content:'\e82b';
+						background-color:$color1;
 						color:$WHITE;
 					}
-				}	
-				.views-field.views-field-title{//title
-					@include colorDescendantsFont($color3);
 				}
-				.views-field{//other icons
-					&:before{
-						background-color:$color3;
-						color:white;
-					}
+				.views-field-field-featured-content{
+					@include backgroundOpacity($color1,0.8);
 				}
 			}
 			//other fields
@@ -128,15 +158,20 @@
 					max-width:100%;
 				}
 			}
+			.views-field-field-general-information{
+				display:none;
+			}
 			.views-field.views-field-title{
 				@include fontelloBeforeClear;
 				border:0;
+				text-align:center;
+				font-weight:bold;
 				.field-content{
-					padding-left:4px;
+					padding-left:3px;
+					padding-right:3px;
 				}
-				@include colorDescendantsFont($color3);
 				span,a{
-					@include remFontSize($fontL);
+					@include remFontSize($fontM);
 					text-decoration:none;
 				}
 			}
@@ -153,7 +188,7 @@
 			}
 			.views-field-field-category-event, .views-field-field-category{
 				&:before{
-					content:'\e81e';
+					content:'\e830';
 				}
 			}
 			//Row Border
@@ -161,12 +196,239 @@
 			@include clearfix;
 			//Row Focus Effect
 			&:hover{
-				@include boxShadowView;
+				//@include boxShadowView;
 				.views-field.views-field-field-image-gallery{ 
 					img{
 						@include zoomImage;
 					}
 					outline:1px solid $GRAY;
+					overflow:hidden;
+				}
+			}
+		}
+		//View content
+		@include clearfix;
+	}
+}
+.js .view-id-businesses_and_events.view-display-id-page_results.listingResults{
+	.view-content{
+		.views-row{
+			position:relative;
+			padding-bottom:10px;
+			margin-bottom:15px;
+			@include clearfix;
+			//Field Row Styling
+			.views-field{
+				position:relative;
+				padding:7px 0;
+				margin-right:7px;
+				@include fontelloBefore;
+				float:left;
+				&:before{
+					background-color: $color3;
+					color:$WHITE;
+					font-size:18px;
+					line-height: 18px;
+					height:18px;
+					width: 18px;
+					padding:2px;
+					border-radius: 3px;
+					position:absolute;
+					bottom:0;
+					top:0;
+					left:8px;
+					margin:auto;
+				}
+				.field-content{
+					display:block;
+					padding-left:40px;
+				}
+			}
+			.views-field.views-field-field-image-gallery{
+				position:absolute;
+				top:0;
+				left:0;
+				@include fontelloBeforeClear;
+				padding:0;
+				margin:0;
+				border:0;
+				.field-content{
+					padding:0;
+				}
+				img{
+					max-width:100%;
+				}
+			}
+			.views-field.views-field-field-image-gallery{
+				max-width:28%;
+			}
+			padding-left:30%;
+			.views-field-title{
+				width:100%;
+				float:left;
+			}
+			@include breakpoint($mobile2Tablet){
+				.views-field.views-field-field-image-gallery{
+					max-width:30%;
+				}
+				padding-left:34%;
+				.views-field-title{
+					width:100%;
+					float:left;
+				}
+			}
+			@include breakpoint(0 $breakpointMobile){
+				.views-field.views-field-field-image-gallery{
+					max-width:100%;
+					position:relative;
+				}
+				padding-left:0;
+				.views-field-title{
+					width:100%;
+					float:left;
+				}
+			}
+			.views-field-field-address, .views-field-field-date-of-event{
+				float:left;
+				width:40%;
+				@include breakpoint(0 $breakpointTablet){
+					width:100%;
+				}
+			}
+			.views-field-field-general-information{
+				float:left;
+				width:100%
+			}
+			.views-field-type, .views-field-field-category, .views-field-field-category-event{
+				float:left;
+				width:40%;
+				@include breakpoint(0 $breakpointTablet){
+					width:100%;
+				}
+			}
+			//top verified line
+			.views-field-field-featured-content{
+				padding:4px;
+				border-top:0;
+				position:absolute;
+				top:0;
+				left:0;
+				min-width:85px;
+				max-width:85px;
+				min-height:30px;
+				z-index:1;
+				margin:0 0 0 0;
+				border-bottom-left-radius:3px;
+				overflow:hidden;
+				@include backgroundOpacity($color3,0.8);
+				@include cssTransition(all 0.35s ease-in-out);
+				&:before{
+					display:none;
+				}
+				.field-content{
+					min-width:80px;
+					color:$WHITE;
+					font-weight:bold;
+					margin-top:5px;
+					text-align:left;
+					padding-left:4px;
+				}
+			}
+			&:hover{
+				.views-field-field-featured-content{
+					min-width:105px;
+					max-width:105px;
+					.field-content{
+						text-align:left;
+					}
+				}
+			}
+			.views-field.views-field-type{
+				&:before{
+					@include remFontSize($fontXXS);
+					border-radius: 17px;
+					padding: 5px;
+					font-size:14px;
+					line-height: 13px;
+					height:14px;
+					width: 14px;
+				}
+			}
+			//content type: icons & colorings
+			&.rowContentType-business-service-or-attraction{
+				.views-field{//other icons
+					&:before{
+						background-color:$WHITE;
+						color:$color3;
+					}
+				}
+				.views-field.views-field-type{//top color1
+					&:before{
+						content:'\e82c';
+						background-color:$color3;
+						color:$WHITE;
+					}
+				}
+				.views-field-field-featured-content{
+					@include backgroundOpacity($color3,0.8);
+				}
+			}
+			&.rowContentType-event{
+				.views-field{//other icons
+					&:before{
+						background-color:$WHITE;
+						color:$color1;
+					}
+				}
+				.views-field.views-field-type{//top color1
+					&:before{
+						content:'\e82b';
+						background-color:$color1;
+						color:$WHITE;
+					}
+				}
+				.views-field-field-featured-content{
+					@include backgroundOpacity($color1,0.8);
+				}
+			}
+			//other fields
+			.views-field.views-field-title{
+				@include fontelloBeforeClear;
+				border:0;
+				text-align:left;
+				font-weight:bold;
+				span,a{
+					@include remFontSize($fontM);
+					text-decoration:none;
+					padding-left:5px;
+				}
+			}
+			//Fontello icons
+			.views-field-field-date-of-event{
+				&:before{
+					content:'\e81c';
+				}
+			}
+			.views-field-field-address{
+				&:before{
+					content:'\e816';
+				}
+			}
+			.views-field-field-category-event, .views-field-field-category{
+				&:before{
+					content:'\e830';
+				}
+			}
+			//Row Border
+			outline:1px solid $DARKERLIGHTGRAY;
+			@include clearfix;
+			//Row Focus Effect
+			&:hover{
+				//@include boxShadowView;
+				.views-field.views-field-field-image-gallery{
+					img{
+						@include zoomImage;
+					}
 					overflow:hidden;
 				}
 			}
@@ -212,6 +474,7 @@ form#views-exposed-form-businesses-and-events-page-results, form#views-exposed-f
 		#edit-field-start-datepicker-wrapper,#edit-field-end-datepicker-wrapper{
 			.form-item .description{
 				display:none;
+				@include accesibleHide;
 			}
 		}
 	}
@@ -223,7 +486,13 @@ form#views-exposed-form-businesses-and-events-page-results, form#views-exposed-f
 		#edit-field-start-datepicker-wrapper,#edit-field-end-datepicker-wrapper{
 			.form-item label{
 				display:none;
+				@include accesibleHide;
 			}
+		}
+	}
+	.view-id-businesses_and_events{
+		#leaflet-map{
+			display:none;
 		}
 	}
 }
@@ -269,28 +538,21 @@ form#views-exposed-form-businesses-and-events-page-results .views-widget-filter-
 /*
  * Layout Region Schemer For Search Business and Events Page
  */
- /*
+
 body.page-search-businesses-and-events{
-	.l-content {
-		.lc-region--inner{
-			@include boxBorderRadiusMarginPadding(2px solid $color3, 3px, 10px 0, 2%);
-			@include regionInnerSchemer($color3, $WHITE, $DARKGRAY, $color3);
-			@include buttonColor1;
-		}
-	}
 	.l-region--sidebar-first{
 		.lc-region--inner{
-			@include boxBorderRadiusMarginPadding(2px solid $color2Light, 3px, 10px 0, 3%);
-			@include regionInnerSchemer($color2, $WHITE, $DARKGRAY, $color2);
-			@include buttonColor2;
+			.b_title_cont{
+				background-color:$color1;
+				padding:8px 12px;
+				margin-bottom:10px;
+				text-align:center;
+				.block__title{
+					color:$WHITE;
+				}
+			}
+			@include buttonColor1;
 		}	
 	}
-	.l-region--sidebar-second{
-		.lc-region--inner{
-			@include boxBorderRadiusMarginPadding(2px solid $color1Light, 3px, 10px 0, 3%);
-			@include regionInnerSchemer($color1, $WHITE, $DARKGRAY, $color2);
-			@include buttonColor3;
-		}
-	}
+
 }
-*/
