--- a/sites/all/themes/wttoc/sass/components/Views_Small_Blocks_Biz_Evs.scss
+++ b/sites/all/themes/wttoc/sass/components/Views_Small_Blocks_Biz_Evs.scss
@@ -85,7 +85,7 @@
 							padding: 10px;
 							position: absolute;
 							margin: 0 !important;
-							bottom: -20px;
+							bottom: -17px;
 							border-radius:35px;
 							z-index:1;
 							color:white;
@@ -101,7 +101,7 @@
 			.views-field-field-date-of-event{
 				text-align:center;
 				.field-content{
-					display: block;
+					display: inline-block;
 				}
 			}
 			.views-field-title .field-content{
