fontello library  updated

--- a/sites/all/libraries/fontello/css/fontello-codes.css
+++ b/sites/all/libraries/fontello/css/fontello-codes.css
@@ -46,3 +46,6 @@
 .icon-fg:before { content: '\e82c'; } /* '' */
 .icon-login:before { content: '\e82d'; } /* '' */
 .icon-logout:before { content: '\e82e'; } /* '' */
+.icon-search:before { content: '\e82f'; } /* '' */
+.icon-rocket-1:before { content: '\e830'; } /* '' */
+.icon-th-list:before { content: '\e831'; } /* '' */
