--- a/sites/all/libraries/fontello/css/fontello.css
+++ b/sites/all/libraries/fontello/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?63868312');
-  src: url('../font/fontello.eot?63868312#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?63868312') format('woff'),
-       url('../font/fontello.ttf?63868312') format('truetype'),
-       url('../font/fontello.svg?63868312#fontello') format('svg');
+  src: url('../font/fontello.eot?29116196');
+  src: url('../font/fontello.eot?29116196#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?29116196') format('woff'),
+       url('../font/fontello.ttf?29116196') format('truetype'),
+       url('../font/fontello.svg?29116196#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?63868312#fontello') format('svg');
+    src: url('../font/fontello.svg?29116196#fontello') format('svg');
   }
 }
 */
@@ -101,3 +101,6 @@
 .icon-fg:before { content: '\e82c'; } /* '' */
 .icon-login:before { content: '\e82d'; } /* '' */
 .icon-logout:before { content: '\e82e'; } /* '' */
+.icon-search:before { content: '\e82f'; } /* '' */
+.icon-rocket-1:before { content: '\e830'; } /* '' */
+.icon-th-list:before { content: '\e831'; } /* '' */
